# postgres

./: .cirrus.star  .cirrus.tasks.yml  .cirrus.yml  .gitignore  .travis.yml  configure  configure.ac  conversion_helpers.txt  meson.build  meson_options.txt
contrib/adminpack/: meson.build
contrib/auto_explain/: meson.build
contrib/bloom/: blutils.c  meson.build
contrib/btree_gin/: meson.build
contrib/citext/: meson.build
contrib/cube/: meson.build
contrib/dblink/: dblink.c  meson.build
contrib/dict_int/: meson.build
contrib/dict_xsyn/: meson.build
contrib/earthdistance/: meson.build
contrib/ltree_plpython/: meson.build
contrib/spi/: meson.build
src/backend/: Makefile  meson.build
src/backend/access/brin/: brin.c  brin_tuple.c  meson.build
src/backend/access/common/: heaptuple.c  indextuple.c  meson.build  printtup.c  tupdesc.c
src/backend/access/gin/: ginutil.c
src/backend/access/gist/: gist.c  gistget.c
src/backend/access/hash/: hash.c  hashpage.c  hashutil.c
src/backend/access/heap/: heapam.c  heapam_handler.c  heapam_indexscan.c  heapam_visibility.c  heapam_xlog.c  hio.c  vacuumlazy.c  visibilitymap.c
src/backend/access/index/: genam.c  indexam.c  indexbatch.c
src/backend/access/nbtree/: nbtinsert.c  nbtpage.c  nbtree.c  nbtsearch.c  nbtutils.c
src/backend/access/rmgrdesc/: heapdesc.c  meson.build
src/backend/access/spgist/: spgutils.c
src/backend/access/table/: tableamapi.c
src/backend/access/transam/: meson.build  twophase.c  varsup.c  xact.c  xlog.c  xloginsert.c  xlogprefetcher.c  xlogreader.c  xlogrecovery.c  xlogutils.c
src/backend/backup/: basebackup_copy.c  basebackup_incremental.c
src/backend/bootstrap/: bootstrap.c  meson.build
src/backend/catalog/: meson.build  pg_publication.c  storage.c  system_views.sql
src/backend/commands/: analyze.c  copyfrom.c  copyfromparse.c  copyto.c  dbcommands.c  explain.c  functioncmds.c  indexcmds.c  tablecmds.c
src/backend/executor/: execExpr.c  execExprInterp.c  execIndexing.c  execParallel.c  execProcnode.c  execReplication.c  execTuples.c  instrument.c  meson.build  nodeBitmapHeapscan.c  nodeBitmapIndexscan.c  nodeIndexonlyscan.c  nodeIndexscan.c  nodeMergejoin.c  nodeSeqscan.c  nodeTidrangescan.c
src/backend/jit/llvm/: llvmjit.c  llvmjit_expr.c  llvmjit_types.c  meson.build
src/backend/lib/: meson.build
src/backend/libpq/: be-secure-openssl.c  meson.build  pqformat.c
src/backend/main/: main.c  meson.build
src/backend/nodes/: gen_node_support.pl  meson.build  tidbitmap.c
src/backend/optimizer/path/: costsize.c
src/backend/optimizer/util/: plancat.c
src/backend/parser/: meson.build  parse_relation.c  parse_target.c
src/backend/port/: meson.build  sysv_shmem.c
src/backend/postmaster/: autovacuum.c  bgwriter.c  checkpointer.c  interrupt.c  launch_backend.c  meson.build  postmaster.c  syslogger.c
src/backend/regex/: meson.build
src/backend/replication/: meson.build  walsender.c
src/backend/replication/libpqwalreceiver/: meson.build
src/backend/replication/logical/: decode.c  logical.c  relation.c  tablesync.c
src/backend/replication/pgoutput/: meson.build
src/backend/rewrite/: rewriteHandler.c
src/backend/snowball/: meson.build
src/backend/storage/aio/: README.md  aio.c  aio_callback.c  aio_init.c  aio_io.c  aio_subject.c  aio_target.c  io_queue.c  meson.build  method_io_uring.c  method_sync.c  method_worker.c  read_stream.c  streaming_read.c
src/backend/storage/buffer/: README  buf_init.c  buf_reserve.c  bufmgr.c  freelist.c  localbuf.c
src/backend/storage/file/: buffile.c  fd.c  meson.build
src/backend/storage/freespace/: freespace.c  fsmpage.c
src/backend/storage/ipc/: ipc.c  ipci.c  (+3 more)
src/backend/tcop/: backend_startup.c  postgres.c
src/backend/utils/: meson.build
src/common/: Makefile  fe_memutils.c  meson.build  pg_backtrace.c  stringinfo.c
src/common/unicode/: generate-unicode_norm_table.pl  meson.build
src/fe_utils/: meson.build
src/include/: c.h  meson.build  miscadmin.h  pg_config.h.in  pg_config_manual.h  pgstat.h  varatt.h
src/include/access/: amapi.h  genam.h  hash.h  heapam.h  hio.h  htup_details.h  indexbatch.h  itup.h  nbtree.h  relscan.h  tableam.h  transam.h  tupdesc.h  tupmacs.h  visibilitymap.h  xlogreader.h
src/include/bootstrap/: bootstrap.h
src/include/catalog/: meson.build
src/include/commands/: copyfrom_internal.h  defrem.h
src/include/common/: fe_memutils.h  pg_backtrace.h
src/include/executor/: execExpr.h  instrument.h  instrument_node.h  tuptable.h
src/include/lib/: pg_tap.h  stringinfo.h
src/include/libpq/: pqformat.h
src/include/mb/: pg_wchar.h
src/include/nodes/: bitmapset.h  execnodes.h  memnodes.h  meson.build  pathnodes.h  pg_list.h
src/include/parser/: meson.build  parse_relation.h  scanner.h
src/include/port/: debug.h
src/include/portability/: instr_time.h
src/include/postmaster/: autovacuum.h  bgworker_internals.h  bgwriter.h  pgarch.h  postmaster.h  startup.h  syslogger.h  walsummarizer.h  walwriter.h
src/include/replication/: slot.h  slotsync.h  walreceiver.h  walsender_private.h
src/include/storage/: aio.h  aio_init.h  aio_internal.h  aio_types.h  buf_internals.h  bufmgr.h  bufpage.h  fd.h  ipc.h  lock.h  lwlock.h  lwlocklist.h  md.h  meson.build  pg_shmem.h  proc.h  read_stream.h  smgr.h  streaming_read.h
src/include/tcop/: backend_startup.h  tcopprot.h
src/include/utils/: backend_status.h  catcache.h  elog.h  float.h  help_config.h  memutils.h  memutils_internal.h  meson.build  palloc.h  pg_locale.h  rel.h  resowner.h  wait_event.h
src/interfaces/libpq/: Makefile  fe-exec.c  libpq-fe.h  meson.build  pqexpbuffer.h
src/port/: Makefile  debug.c  meson.build  pgsleep.c  win32security.c
src/port/t/: 001_filesystem.c
src/test/isolation/: isolation_schedule  meson.build
src/test/regress/: meson.build  parallel_schedule  pg_regress.c  regress.c
src/timezone/: meson.build  zic.c
src/tools/pg_bsd_indent/: .gitignore  Makefile  README  indent.c  meson.build
src/tools/pgindent/: merge_typedefs  meson.build  pgindent  typedefs.list  typedefs_from_objs
(+313 files in other folders)
