btree_gin = shared_module('btree_gin',
  files('btree_gin.c'),
  dependencies: [backend_code],
  c_args: [],
  link_with: [postgres],
  name_prefix: '',
  install: true)

install_data(
  'btree_gin.control',
  'btree_gin--1.0.sql',
  'btree_gin--1.0--1.1.sql',
  'btree_gin--1.1--1.2.sql',
  'btree_gin--1.2--1.3.sql',
  install_dir: get_option('datadir') / 'extension'
)

regress_tests += {
  'name': 'btree_gin',
  'sd': meson.current_source_dir(),
  'bd': meson.current_build_dir(),
  'sql': [
    'install_btree_gin',
    'int2',
    'int4',
    'int8',
    'float4',
    'float8',
    'money',
    'oid',
    'timestamp',
    'timestamptz',
    'time',
    'timetz',
    'date',
    'interval',
    'macaddr',
    'macaddr8',
    'inet',
    'cidr',
    'text',
    'varchar',
    'char',
    'bytea',
    'bit',
    'varbit',
    'numeric',
    'enum',
    'uuid',
    'name',
    'bool',
    'bpchar',
  ],
}
